# writerSpace

./: .gitignore  README.md
backend/: .env  0001_create_users.sql  0002_create_projects.sql  Cargo.toml  diesel.toml
backend/migrations/2025-06-30-174119_create_projects/: up.sql
backend/migrations/2025-06-30-174127_create_documents/: up.sql
backend/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
backend/src/handlers/: analyze.rs  documents.rs  projects.rs  users.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: AnalyzePage.tsx  App.tsx  api.ts  index.css
frontend/src/pages/: AnalyzePage.tsx
llm_microservice/: main.py
