[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7" # Web framework built on top of tokio
tokio = {version = "1", features = ["full"]}    # Async runtime needed by Axum
serde = {version = "1.0", features = ["derive"]} # JSON (de)serialization
serde_json = "1.0" # JSON conversion helpers
reqwest = {version = "0.12", features = ["json"]} # HTTP client to talk to Python microservices
tracing-subscriber = "0.3" # Logging
# ---- database--------------------------------
# r2d2 for connection pooling
# chrono for timestamps
# uuid for UUID primary keys
diesel = {version = "2.2.11", features = ["postgres", "r2d2", "chrono", "uuid"]}
dotenvy = "0.15" # Load .env files
# ---------------------------------------------
chrono = {version = "0.4", features = ["serde"]}
